--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello, World
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale-1">
+        <meta name="author" content="haobu">
+        <title>Yin-Yan Divination</title>
+    </head>
+    <body>
+        <section>
+            <h1>
+                Welcome to Yin-Yan Divination.
+            </h1>
+            <p>This is Taiji.<br><image src="images/taiJi.jpg"></p>
+        </section>
+    </body>
+</html>
